--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.544.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-liquid-gauge": "^1.2.4",
     "react-router": "^7.9.3",
